Fix backface-visibility feature

--- a/credit-card-payment-form/style.css
+++ b/credit-card-payment-form/style.css
@@ -106,7 +106,7 @@
     width: 100%;
     background: linear-gradient(45deg, blueviolet , deepPink);
     border-radius: 10px;
-    backface-visibility: visible;
+    backface-visibility: hidden;
     box-shadow: 0px 10px 20px rgba(0,0,0,.3);
     padding: 20px;
     transform: perspective(1000px) rotateY(0deg);
